--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -64,6 +64,7 @@
   color: white;
   font-weight: bold;
   font-size: 16px;
+  border: none;
 }
 
 .Download-button:hover {
@@ -74,4 +75,45 @@
 .Download-button:active {
   outline: none;
   outline-color: none;
+}
+
+@media screen and (max-width: 800px) {
+  .Banner-container {
+    position: relative;
+    right:0px;
+    bottom: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.16);
+    width: calc(100% - 40px);
+    height: 120px;
+    background: #fff;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 20px;
+    z-index: 999;
+  }
+
+  .Title-primary {
+    font-size: 24px;
+    font-weight: bolder;
+    text-align: left;
+  }
+  
+  .Title-secondary {
+    font-size: 12px;
+    text-align: left;
+    color: #aaa
+  }
+
+  .Download-button {
+    padding: 5px 10px;
+    background: #000;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.16);
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+  }
 }
