--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -47,3 +47,12 @@
   line-height: 30px;
   font-size: 20px;
 }
+
+@media screen and (max-width: 800px) {
+  .Container {
+    border-top: 1px solid #eee;
+    margin-bottom: 40px;
+    max-width: 800px;
+  }
+
+}
