--- a/src/styles/slideshow.css
+++ b/src/styles/slideshow.css
@@ -27,3 +27,41 @@
   font-weight: bolder;
   box-shadow: 0px 0px 10px rbga(0,0,0,0.16)
 }
+
+@media screen and (max-width: 800px) {
+  .Slideshow-container {
+    min-width: 100%;
+    height: 50%;
+    object-fit: cover;
+  }
+  
+  .Slideshow-background {
+    /* width: 100%; */
+    /* height: auto; */
+    filter: brightness(0.8);
+    background-size: cover;
+    width: 100%;
+    height: auto;
+    
+  }
+
+  .Image-overlay {
+    position: fixed;
+    top: 0;
+    /* left: 0px; */
+    padding: 20px;
+    /* transform: translate(50%, 50%) */
+    max-width: 100%;
+
+  }
+
+  .Overlay-text {
+    font-size: 48px;
+    color: white;
+    max-width: 100%;
+    text-align: center;
+    font-weight: bolder;
+    box-shadow: 0px 0px 10px rbga(0,0,0,0.16)
+  }
+  
+}
