--- a/src/styles/disclaimer.css
+++ b/src/styles/disclaimer.css
@@ -3,4 +3,15 @@
   border-top: 1px solid #eee;
   color: #aaa;
   font-size: 12px;
+  background: #fff;
+}
+
+@media screen and (max-width: 800px) {
+  .Disclaimer-container {
+    padding: 50px 0px;
+    border-top: 1px solid #eee;
+    color: #aaa;
+    font-size: 12px;
+    background: #fff;
+  }
 }
