--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,6 @@ top: 0px;
   box-shadow: 0px 0px 10px rbga(0,0,0,0.16)
 }
 
-
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
@@ -89,7 +88,7 @@ top: 0px;
 
 
   .App-content {
-    padding: 20px 0;
+    padding: 20px 20px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.16);
     height: auto;
     background: #fff;
