--- a/src/styles/products.css
+++ b/src/styles/products.css
@@ -93,10 +93,17 @@
   height: 100%;
 }
 
+.App-card-icon {
+  height: 40px;
+  margin-right: 10px;
+}
+
 .App-card-title {
   font-size: 48px;
   font-weight: bolder;
   color: white;
+  align-items: center;
+  display: flex;
 }
 
 .App-card-secondary-title {
