--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -44,7 +44,6 @@
   transform: skewY(4deg);
   padding: 70px 0;
   z-index: -1;
-
 }
 
 .Carousel-details {
@@ -76,7 +75,6 @@
   left: 19.1%;
   right: auto;
   margin: 0 auto;
-  width: 61.8%;
   /* height: 670px; */
 }
 
@@ -149,7 +147,6 @@
 .Carousel-body {
   display: block;
   margin: 670px auto 0 auto;
-  width: 61.8%;
 }
 
 .Carousel-arrows {
@@ -172,7 +169,109 @@
   color: white;
   font-size: 56px;
 }
+
 .Carousel-arrow:hover {
   cursor: pointer;
   opacity: 1;
+}
+
+@media screen and (max-width: 800px) {
+  .Carousel-image {
+    height: 250px;
+    /* width: calc(100% - 40px); */
+    position: absolute;
+    right: 20px;
+    top: 180px;
+    /* min-width: 20px; */
+  }
+
+  .Carousel-head-wrapper {
+    position: relative;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+  }
+  
+  .Carousel-details {
+    /* height: 00px; */
+    /* background: green; */
+    transform: skewY(-4deg);
+    width: 100%;
+    margin: 0 auto;
+    text-align: left;
+    height: 700px;
+    margin-top: -420px
+  }
+
+  .Carousel-gallery {
+    height: 450px;
+  }
+
+  .Carousel-body {
+    display: block;
+    margin: 450px auto 0 auto;
+  }
+
+  .Carousel-head-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: space-between */
+  }
+
+  /* .Carousel-head-text-download-wrapper {
+    flex-direction: column;
+    display: flex;
+  }
+  
+  .Carousel-head-text-download-alt {
+    margin-top: 10px;
+    margin-left: 0px;
+  }
+
+  .Carousel-head-text-download-alt:first-child {
+    margin-top: 0;
+  }
+ */
+
+ .Carousel-details-background {
+  padding: 35px 0;
+  min-height: 300px;
+}
+
+  .Carousel-head-title {
+    padding: 0px 0;
+    text-align: center;
+  }
+
+  .Carousel-arrows {
+    height: 300px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  
+  .Carousel-arrow {
+    height: 100%;
+    width: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    opacity: 0.1;
+    align-items: center;
+    cursor: pointer;
+    z-index: 99999;
+    color: white;
+    font-size: 32px;
+  }
+
+  .Carousel-head {
+    /* margin-top: -620px; */
+    /* margin: 0px auto 50px auto; */
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    /* height: 670px; */
+  }
 }
