--- a/src/components/email/email.css
+++ b/src/components/email/email.css
@@ -19,19 +19,28 @@
   border-bottom: 2px solid rgba(255, 255, 255, 0.5);
   transition: all ease-in-out 0.5s;
   color: white;
-  padding: 10px 5px;
+  padding: 10px 0px;
 }
 
 .Email-input:focus {
   outline: none;
-  width: 500px;
-  font-size: 24px;
-  background: none;
-  border: none;
   border-bottom: 2px solid white;
 }
 
 ::placeholder {
   color: white;
   opacity: 0.5;
+}
+
+@media screen and (max-width: 800px) {
+  .Email-container {
+    max-width: calc(100% - 40px);
+    padding: 150px 0px;
+    margin: auto
+  }
+
+  .Email-input {
+    width: 100%;
+  }
+  
 }
