responsiveness for ipad

--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -175,6 +175,19 @@
   opacity: 1;
 }
 
+@media screen and (max-width: 1366px) {
+  .Carousel-image {
+    height: 400px;
+    /* min-width: calc(100% - 40px);
+    position: absolute;
+    right: 20px;
+    top: 180px;
+    min-width: 20px; */
+    object-fit: contain;
+  }
+}
+
+
 @media screen and (max-width: 800px) {
   .Carousel-image {
     height: 250px;
