--- a/src/components/tab/tab.css
+++ b/src/components/tab/tab.css
@@ -40,12 +40,12 @@
 }
 
 .Tab {
-  /* font-size: 24px; */
+  font-size: 24px;
   font-weight: normal;
   color: #aaa;
   cursor: pointer;
   transition: ease-in-out 0.5s;
-  margin-left: 20px;
+  margin-left: 24px;
 }
 
 .Tab.active {
@@ -115,7 +115,13 @@
 
   .Tab {
     margin: 20px 0 0 0;
-    transition: ease-in-out 0.1s;
+    transition: ease-in-out 0.2s;
+    /* transition-delay: 0.2s; */
+    font-size: 21px
+  }
+
+  .Tab:first-child {
+    /* transition-delay: none; */
   }
 
   .Tab-toggle {
