--- a/src/App.css
+++ b/src/App.css
@@ -18,10 +18,21 @@
 .App-header {
   /* display: flex; */
   /* flex-direction: row; */
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.16);
   background: #fff;
+  position: fixed;
+  width: 100%;
   height: auto;
-  -webkit-transition: height 2s; /* For Safari 3.1 to 6.0 */
-  transition: height 2s;  /* justify-content: center; */
+  -webkit-transition: ease-in-out 0.5s;
+  /* For Safari 3.1 to 6.0 */
+  transition: ease-in-out 0.5s;
+  /* justify-content: center; */
+  z-index: 99999;
+}
+
+.App-header.Top {
+  background: none;
+  box-shadow: none;
 }
 
 .App-title {
@@ -34,7 +45,7 @@
 
 .App-content {
   padding: 20px 0;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.16);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.16);
   /* height: 100%; */
   background: #fff;
   /* padding: auto 20px; */
@@ -44,24 +55,22 @@
 }
 
 .App-slideshow {
-z-index: -1;
-display: block;
-width: calc(100% - 740px);
-height: 100%;
-position: fixed;
-right: 0px;
-top: 0px;
-
+  z-index: -1;
+  display: block;
+  width: calc(100% - 740px);
+  height: 100%;
+  position: fixed;
+  right: 0px;
+  top: 0px;
 }
 
 .Image-overlay {
   position: relative;
   /* top: 0px; */
   /* left: 0px; */
-  padding: 150px 0px;
+  padding: 250px 0px 150px 0px;
   max-width: 61.8%;
   margin: auto
-
 }
 
 .Overlay-text {
@@ -69,12 +78,16 @@ top: 0px;
   color: white;
   text-align: left;
   font-weight: bolder;
-  box-shadow: 0px 0px 10px rbga(0,0,0,0.16)
+  box-shadow: 0px 0px 10px rbga(0, 0, 0, 0.16)
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 @media screen and (max-width: 800px) {
@@ -87,17 +100,14 @@ top: 0px;
     height: auto;
     z-index: -1;
   }
-
-
   .App-content {
     padding: 20px 20px;
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.16);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.16);
     height: auto;
     background: #fff;
     /* min-height: 1080px; */
-    width:calc(100%-40px)
+    width: calc(100%-40px)
   }
-
   .App-slideshow {
     z-index: -1;
     display: block;
@@ -106,25 +116,21 @@ top: 0px;
     position: relative;
     /* right: 0px; */
     /* top: 0px; */
-    
-    }
-
-    .Overlay-text {
-      font-size: 48px;
-      color: white;
-      max-width: 100%;
-      text-align: center;
-      font-weight: bolder;
-      box-shadow: 0px 0px 10px rbga(0,0,0,0.16)
-    }
-
-    .Image-overlay {
-      position: relative;
-      /* top: 0px; */
-      /* left: 0px; */
-      padding: 70px 0px;
-      max-width: calc(100% - 40px);
-      margin: auto
-    
-    }
+  }
+  .Overlay-text {
+    font-size: 48px;
+    color: white;
+    max-width: 100%;
+    text-align: center;
+    font-weight: bolder;
+    box-shadow: 0px 0px 10px rbga(0, 0, 0, 0.16)
+  }
+  .Image-overlay {
+    position: relative;
+    /* top: 0px; */
+    /* left: 0px; */
+    padding: 140px 0px 70px 0px;
+    max-width: calc(100% - 40px);
+    margin: auto
+  }
 }
