--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -1,3 +1,7 @@
+.Carousel-container {
+  padding-top: 100px
+}
+
 .Carousel-gallery * {
   transition: all 1s;
 }
@@ -167,7 +171,7 @@
   opacity: 0.1;
   align-items: center;
   cursor: pointer;
-  z-index: 99999;
+  z-index: 999;
   color: white;
   font-size: 56px;
 }
@@ -193,7 +197,7 @@
 @media screen and (max-width: 800px) {
   .Carousel-image {
     height: 250px;
-    min-width: calc(100% - 40px);
+    max-width: calc(100% - 40px);
     position: absolute;
     right: 20px;
     top: 180px;
@@ -276,7 +280,7 @@
     opacity: 0.1;
     align-items: center;
     cursor: pointer;
-    z-index: 99999;
+    /* z-index: 99999; */
     color: white;
     font-size: 32px;
   }
