--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -91,6 +91,10 @@
   filter: brightness(0.8)
 }
 
+a {
+  color: inherit;
+}
+
 @media screen and (max-width: 800px) {
   .Footer-container {
     /* padding: 50px 0px; */
