adding event carousel item

--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -146,6 +146,11 @@
   display: flex;
 }
 
+.Carousel-head-text-event-info-wrapper {
+  flex-direction: column;
+  display: flex;
+}
+
 .Carousel-head-text-download-wrapper a {
   height: 40px;
 }
@@ -181,6 +186,11 @@
   opacity: 1;
 }
 
+.Event-detail-icon {
+  width: 20px;
+  margin-right: 20px;
+}
+
 @media screen and (max-width: 1366px) {
   .Carousel-image {
     height: 400px;
@@ -194,12 +204,13 @@
 }
 
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 768px) {
   .Carousel-image {
     height: 250px;
     max-width: calc(100% - 40px);
     position: absolute;
-    right: 20px;
+    right: 50%;
+    transform: translateX(50%);
     top: 180px;
     /* min-width: 20px; */
     object-fit: contain;
@@ -237,6 +248,16 @@
     flex-direction: column;
     align-items: center;
     /* justify-content: space-between */
+  }
+
+  .Carousel-head-text-event-info-wrapper {
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+  }
+
+  .Event-detail-icon {
+    /* display: none; */
   }
 
   /* .Carousel-head-text-download-wrapper {
