--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -26,6 +26,7 @@
   border-radius: 3px;
   margin: 36px 0;
   margin-right: 10px;
+  border:none;
 }
 
 .Carousel-indicator:last-child {
@@ -173,17 +174,19 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  opacity: 0.1;
+  /* opacity: 0.1; */
   align-items: center;
   cursor: pointer;
   z-index: 999;
-  color: white;
+  color: rgba(255,255,255,0.1);
+  background: none;
+  border: none;
   font-size: 56px;
 }
 
 .Carousel-arrow:hover {
   cursor: pointer;
-  opacity: 1;
+  color: rgba(255,255,255);
 }
 
 .Event-detail-icon {
