--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,4 +1,54 @@
 .Home-container {
+  /* background: linear-gradient(to bottom left,#FD8828, rgb(200, 23, 25));
+  background: -webkit-linear-gradient(to bottom left, #FD8828, rgb(200, 23, 25));
+  transition: ease-in-out 0.7s; */
+  background-color: #FAD961;
+  background-image: linear-gradient(90deg, #FAD961 0%, red 100%);
+  
+  /* background: linear-gradient(237deg, #FD8828, rgb(255, 162, 85)); */
+  background-size: 400% 400%;
+  -webkit-animation: fade-background 1s ease infinite;
+  -moz-animation: fade-background 1s ease infinite;
+  animation: fade-background 1s ease infinite;
+}
+
+@-webkit-keyframes fade-background {
+  0% {
+    background-position: 50% 0%
+  }
+  50% {
+    background-position: 51% 100%
+  }
+  100% {
+    background-position: 50% 0%
+  }
+}
+
+@-moz-keyframes fade-background {
+  0% {
+    background-position: 50% 0%
+  }
+  50% {
+    background-position: 51% 100%
+  }
+  100% {
+    background-position: 50% 0%
+  }
+}
+
+@keyframes fade-background {
+  0% {
+    background-position: 50% 0%
+  }
+  50% {
+    background-position: 51% 100%
+  }
+  100% {
+    background-position: 50% 0%
+  }
+}
+
+/* .Home-container.whalesper {
   background: linear-gradient(to bottom left,#29ABE2, #1B1464);
   background: -webkit-linear-gradient(to bottom left, #29ABE2, #1B1464);
-}
+} */
