--- a/src/components/tab/tab.css
+++ b/src/components/tab/tab.css
@@ -68,6 +68,7 @@
   cursor: pointer;
   transition: ease-in-out 0.2s;
   margin-left: 24px;
+  opacity: 0.6;
 }
 
 .Tab.Top {
@@ -77,7 +78,8 @@
 
 .Tab.active {
   /* font-size: 24px; */
-  font-weight: bolder;
+  /* font-weight: bolder; */
+  opacity: 1;
   /* color: black;
   cursor: pointer;
   transition: ease-in-out 0.5s;
@@ -87,11 +89,11 @@
 
 
 .Tab:hover {
-  color: #666;
+  opacity: 1;
 }
 
 .Tab.Top:hover {
-  color: #ccc;
+  opacity: 1;
 }
 
 .Logo {
